--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: compile check
         run: |
+          sudo find -name "hoge.txt"   
           pwd
           cd /home/runner/work
           ls
