--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     
     steps:
       - name: compile check
+        uses: actions/checkout@master
         run: |
           sudo find /home/ -name "hoge.txt"   
           pwd
