--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           ls
           echo "これで終わり？"
           cat $(pwd)/test.saty
-#          docker run --rm -v $(pwd):/home/opam/satysfi amutake/satysfi satysfi --type-check-only /home/runner/work/ci-test/ci-test/test/test.saty
+          docker run --rm -v $(pwd):/home/opam/satysfi amutake/satysfi satysfi --type-check-only $(pwd)/test.saty
