--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
     - run: opam install xml-light
     - run: opam install menhir
     - run: opam install ocamlfind
-    - run: export PATH=$PATH:~/.opam/*/bin/menhir
+    - run: eval $(opam env)
+#    - run: export PATH=$PATH:~/.opam/*/bin/menhir
 #    - run: export PATH=$PATH:~/.opam/*/bin/ocamlfind
     - run: make xmltest
