--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
         ocaml-version: ${{ matrix.ocaml-version }}
     - run: opam install xml-light
     - run: opam install menhir
+    - run: cp ~/.opam/*/bin/menhir .
     - run: opam install ocamlfind
-    - run: eval $(opam env)
-#    - run: export PATH=$PATH:~/.opam/*/bin/menhir
-#    - run: export PATH=$PATH:~/.opam/*/bin/ocamlfind
+    - run: cp ~/.opam/*/bin/ocamlfind .
     - run: make xmltest
