--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,4 @@ jobs:
     - run: opam pin add test.dev -n .
     - run: opam depext -yt test
     - run: opam install -t . --deps-only
+    - run: xmltest
