--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
         ocaml-version: ${{ matrix.ocaml-version }}
     - run: opam pin add test.dev -n .
     - run: opam depext -yt test
-    - run: opam install -t . --deps-only
+    - run: opam install -t .
